@@ -145,6 +145,8 @@ Set the typ of service flag (TOS). \fIn\fR can be either decimal or hexadecimal 
 Print
 .B fping
 version information.
+.IP \fB-H\fIn\fR 5
+Set the IP TTL field (time to live hops).
 
 .SH EXAMPLES
 The following perl script will check a list of hosts and send mail if
